# duckling

./: .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh.md  components.json  eslint.config.js  eslint.config.mjs  index.html  lingui.config.ts  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/: PATCHES.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: release.yaml
connector/: Cargo.toml  rustfmt.toml
connector/src/: api.rs  cancel.rs  config.rs  error.rs  errors.rs  lib.rs  ssh_config.rs  ssh_tunnel.rs  transport.rs  types.rs  utils.rs
connector/src/dialect/: ast.rs  capabilities.rs  mod.rs
connector/src/dialect/clickhouse/: mod.rs  type_arrow.rs
connector/src/dialect/clickhouse_tcp/: mod.rs  type_json.rs
connector/src/dialect/duckdb/: duckdb_sync.rs  mod.rs
connector/src/dialect/file/: mod.rs
connector/src/dialect/folder/: mod.rs
connector/src/dialect/mysql/: decode.rs  mod.rs  type_arrow.rs  type_json.rs
connector/src/dialect/postgres/: decode.rs  mod.rs  type_arrow.rs  type_json.rs
connector/src/dialect/quack/: mod.rs
connector/src/dialect/sqlite/: arrow_type.rs  decode.rs  json_type.rs  mod.rs  type_arrow.rs
connector/src/preview/: build.rs  cell.rs  grid.rs  mod.rs
connector/src/util/: arrow_reader.rs  coerce.rs  decimal.rs  escape.rs  mod.rs  row_collect.rs  row_reader.rs  row_writer.rs
scripts/: build.ps1  fill-hotkey-i18n.py  fill-hotkey-settings-i18n.py  fill-zh-i18n.py
src/: App.tsx  Database.tsx  Dataset.tsx  FileTree.tsx  Home.tsx  InfiniteTable.tsx  api.ts  init-monaco.ts  init-theme.ts  main.tsx  modules.d.ts  styles.css  theme.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: app.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cmd.rs  connection_registry.rs  main.rs  secret_store.rs  sql.rs  utils.rs
src-tauri/src/cmd/: app.rs  connection_registry.rs  db.rs  inflight.rs  mod.rs  session_manager.rs  sql_template.rs
src-tauri/src/dialect/: ast.rs  clickhouse.rs  duckdb.rs  file.rs  folder.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
src-tauri/src/dialect/clickhouse/: mod.rs
src-tauri/src/dialect/duckdb/: mod.rs
src-tauri/src/dialect/file/: mod.rs
src-tauri/src/dialect/folder/: mod.rs
src-tauri/src/dialect/mysql/: mod.rs
src-tauri/src/dialect/postgres/: mod.rs
src-tauri/src/dialect/sqlite/: mod.rs
src-tauri/src/dialect/sqlx/: mysql.rs  sqlite.rs
src/app/: globals.css
src/ast/: analyze.test.ts  analyze.ts  index.ts
src/components/: AgTable.tsx  CanvasTable.tsx  ContextMenu.tsx  DBConfig.tsx  DataFrame.tsx  Dataset.tsx  DatasetEmpty.tsx  DialogBox.tsx  DialogButton.tsx  Dropdown.tsx  Editor.tsx  Empty.tsx  ErrorBoundary.tsx  FileTabs.tsx  FileTree.tsx  Folder.tsx  HeaderCell.tsx  Layout.tsx  MuiIconButton.tsx  PageTabList.tsx  PageTabs.tsx  PaginationDropdown.tsx  PaneDropOverlay.tsx  ResizeHandle.tsx  Schema.tsx  Setting.tsx  SideToolbar.tsx  StatusBar.tsx  TabPaneLayout.tsx  Table.tsx  ToggleColorMode.tsx  Toolbar.tsx  TreeItem.tsx  tabDragSession.tsx  theme-provider.tsx
src/components/charts/: SimpleBarChart.tsx
src/components/custom/: DatabaseDialog.tsx  Dialog.tsx  FontFamilyCombobox.tsx  Icons.tsx  PasswordInput.tsx  Tooltip.tsx  TreeView.tsx  TreeView0.tsx  TreeView1.tsx  TreeView2.tsx  TreeView3.tsx  button.tsx  context-menu.tsx  dropdown-menu.tsx  hidden.tsx  pagination.tsx  search.tsx  siderbar-nav.tsx  tabs.tsx  tooltip.tsx  use-dialog.tsx
src/components/dataframe/: CountGroupDialog.tsx  HeaderCell.tsx
src/components/editor/: MiniEditor.tsx  MonacoEditor.tsx  SingleLineEditor.tsx  completion.ts  holywellDuckdbProfile.ts  monacoConfig.ts  sqlFormat.ts  useRegister.tsx
src/components/mui/: MuiIconButton.tsx  PageTabList.tsx  Theme.tsx  ThemeWrapper.tsx  TreeItem.tsx  TreeView0.tsx  theme.ts
src/components/sidebar/: DBTree.tsx  DBTreeItem.tsx  DBTreeView.tsx  FileTree.tsx  SideToolbar.tsx  index.tsx
src/components/tables/: AgTable.tsx  CanvasTable.tsx  HeaderCell.tsx  PivotCanvasTable.tsx  format.ts  highlight-header-when-select-cell.ts  index.tsx  menuIcons.ts  theme.ts
src/components/ui/: accordion.tsx  alert-dialog.tsx  button-group.tsx  card.tsx  (+23 more)
src/demo/: tree.tsx
src/hooks/: context.tsx  index.ts  resize.module.css  resize.ts  theme-provider.tsx  theme.ts  use-color-theme.ts  use-toast.ts
src/hotkeys/: HotkeysHelpDialog.tsx  HotkeysRoot.tsx  format.ts  index.ts  registry.ts  resolve.ts  useAppHotkey.ts
src/i18n/: AppI18nProvider.tsx  index.ts
src/lib/: capabilities.ts  connectionConfig.ts  connectionRef.ts  connectionTransfer.ts  editorCursorFormat.ts  filterRows.ts  migrateScratchSql.ts  queryHistory.ts  scratchSql.ts  statusBarContext.ts
src/pages/: Content.tsx  Setting.tsx  main.tsx  side.tsx
src/sql/: languageSetup.ts
src/stores/: app.ts  computed.ts  database.ts  dataset.ts  db.ts  dbCache.ts  dbList.ts  editorCursor.ts  editorDirty.ts  editorSqlError.ts  index.ts  indexdb.ts  notification.ts  querySession.ts  secretStore.ts  setting.ts  sshProfileList.ts  store.ts  tabLayout.ts  tabs.ts  tauriStore.ts  utils.ts  workspaceStore.ts
src/themes/: presets.ts
src/utils/: dataframe.ts  index.ts
tests/: capabilities.test.ts  columnProfile.test.ts  connectionConfig.test.ts  connectionIpc.test.ts  connectionRef.test.ts  connectionTransfer.test.ts  countByColumn.test.ts  dataframe.test.ts  dbListStore.test.ts  editorCursorFormat.test.ts  editorSqlErrorMap.test.ts  filterRows.test.ts  getParams.test.ts  hotkeys.test.ts  macros.test.ts  orderBy.test.ts  pivot.test.ts  queryHistory.test.ts  querySessionStore.test.ts  sampleAndDrill.test.ts  scratchSql.test.ts  secretStore.test.ts  sqlAnalyzer.test.mjs  sqlAnalyzer.test.ts  sshProfile.test.ts  statusBarContext.test.ts  tabLayout.test.ts  tabsStore.test.ts
tests/helpers/: fixtures.ts  mockTauri.ts
(+85 files in other folders)
