[package]
name = "duckling"
version = "0.0.16"
description = "Duckling"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = { version = "^53.0.0", features = ["prettyprint", "csv"] }

duckdb = { version = "1.1.1", git = "https://github.com/l1xnan/duckdb-rs.git", features = [
    "extensions-full",
    "bundled"
] }


futures-util = "0.3"
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
#clickhouse-rs = "1.1.0-alpha.1"
clickhouse-rs = { git = "https://github.com/mel-mel-king/clickhouse-rs.git", branch = "decimal128" }
rusqlite = { version = "0.32.1", features = ["bundled", "column_decltype", "modern_sqlite"] }
mysql = { version = "25.0.0" }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1", "array-impls", "with-chrono-0_4"] }
tauri = { version = "^2.0.0", features = [
    "devtools",
    "image-ico",
    "image-png",
    "tray-icon",
] }
# tauri plugin
tauri-plugin-shell = "^2.0.0"
tauri-plugin-dialog = "^2.0.3"
tauri-plugin-log = "^2.0.0"
tauri-plugin-process = "^2.0.0"
tauri-plugin-window-state = "^2.0.0"
tauri-plugin-clipboard-manager = "^2.0.0"
tauri-plugin-store = "^2.0.0"

anyhow = "1"
url = "^2.5.0"
log = "^0.4"
nanoid = "0.4.0"
chrono = "^0.4"
chrono-tz = "^0.8"
async-trait = "^0.1"
time = "0.3.34"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.36.0", features = ["macros", "test-util"] }
sqlparser = { version = "0.49", features = ["json_example"] }
sqlformat = "0.2.4"
glob = "*"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
