[package]
name = "duckling"
version = "0.0.16"
description = "Duckling"
authors = ["you"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.1.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "^2.0.0", features = [
    "devtools",
    "image-ico",
    "image-png",
    "tray-icon",
] }
# tauri plugin
tauri-plugin-shell = "^2.0.0"
tauri-plugin-dialog = "^2.0.0"
tauri-plugin-log = "^2.3.1"
tauri-plugin-process = "^2.0.0"
tauri-plugin-window-state = "^2.2.2"
tauri-plugin-clipboard-manager = "^2.0.0"
tauri-plugin-store = "^2.0.0"

log = "^0.4"
url = "^2.5.0"
sqlparser = { version = "0.55", features = ["json_example"] }
sqlformat = "0.3.5"
connector = { path = "../connector" }
anyhow = "1.0.98"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
